# farms_core

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml  config.yml
ducks/: conf.py  index.rst
ducks/reference/: index.rst  options.rst  units.rst
ducks/reference/Amphibious/: amphibious_data.rst  animat_data.rst  cython_data.rst  data.rst  index.rst  network.rst
ducks/reference/Array/: array.rst  cython_array.rst  index.rst
ducks/reference/IO/: hdf5.rst  index.rst  sdf.rst  yaml.rst
ducks/reference/Model/: control.rst  cython_data.rst  data.rst  index.rst  options.rst
ducks/reference/Pylog/: index.rst  logger.rst
ducks/reference/Sensors/: convention.rst  cython_data.rst  data.rst  index.rst
ducks/reference/Simulation/: argument_parser.rst  index.rst  options.rst
ducks/reference/Utils/: index.rst  profile.rst  transform.rst
farms_core/: README.md  __init__.py  doc.py  options.py  plot.py  types.pxd  units.py
farms_core/amphibious/: __init__.py  data.py  data_cy.pyx  network.py
farms_core/analysis/: __init__.py  metrics.py  plot.py
farms_core/array/: array.py  array_cy.pxd  array_cy.pyx  types.py
farms_core/experiment/: README.md  __init__.py  data.py  options.py
farms_core/extensions/: __init__.py  extensions.py
farms_core/io/: __init__.py  hdf5.py  sdf.py  yaml.py
farms_core/model/: control.py  data.py  data_cy.pxd  options.py
farms_core/pylog/: __init__.py  log.py
farms_core/sensors/: README.md  data.py  data_cy.pxd  data_cy.pyx  sensor_convention.pxd  sensor_convention.pyx
farms_core/simulation/: data.py  options.py  parse_args.py
farms_core/utils/: profile.py  transform.pxd
farms_data/: __init__.py  options.py  units.py
farms_data/amphibious/: animat_data.py  animat_data_cy.pxd  animat_data_cy.pyx  data.py  data_cy.pxd
farms_data/array/: __init__.py  array.py
farms_data/io/: hdf5.py  sdf.py  yaml.py
farms_data/model/: control.py  data.py  data_cy.pyx  options.py
farms_data/sensors/: data.py  data_cy.pxd  data_cy.pyx  sensor_convention.pxd  sensor_convention.pyx
farms_data/simulation/: options.py  parse_args.py
farms_data/utils/: profile.py  transform.pyx
