[build-system]
requires = [
     "setuptools",
     "Cython >= 0.15.1",
     "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "farms_core"
version = "0.1"
description = "FARMS core package"
license = {file = "LICENSE"}
dependencies = [
    "nptyping",
    "PyYAML",
    "trimesh",
    "scipy",
    "h5py",
]
classifiers = [
  "Development Status :: 3 - Beta",
  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",
  "ScieTopic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Artificial Life",
  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://farmsim.dev"
Documentation = "https://farmsim.dev"
Repository = "https://github.com/farmsim/farms_core.git"
Issues = "https://github.com/farmsim/farms_core/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.optional-dependencies]
analysis = [
    "matplotlib",
    "colorama",
    "PyQt5",
]
