[build-system]
requires = [
     "setuptools",
     "Cython >= 0.15.1",
     "numpy <= 1.26.4",
]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.0"
name = "farms_core"
description = "FARMS core package"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">= 3.11"
dependencies = [
    "numpy <= 1.26.4",
    "nptyping",
    "PyYAML",
    "trimesh",
    "scipy",
    "h5py",
    "matplotlib",
    "colorama",
]
keywords = ["farms", "framework", "animals", "robot", " modeling", "simulation"]
classifiers = [
  "Development Status :: 3 - Beta",
  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",
  "ScieTopic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Artificial Life",
  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://farmsim.dev"
Documentation = "https://farmsim.dev"
Repository = "https://github.com/farmsim/farms_core.git"
Issues = "https://github.com/farmsim/farms_core/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.optional-dependencies]
analysis = []

[tool.setuptools.packages.find]
# This is equivalent to find_packages() with no arguments

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
farms_core = "farms_core"

[tool.setuptools.package-data]
farms_core = [
    "*.pxd",
    "array/*.pxd",
    "sensors/*.pxd",
    "model/*.pxd",
    "utils/*.pxd"
]